<resources>
    <string name="app_name">DeliciousNotes</string>

    <!-- Navigation id -->
    
    <string name="recipes_add_menu">Добавить рецепт</string>
    <string name="list_of_recipes_menu">Рецепты</string>
    <string name="calculator_menu">Калькулятор БЖУ</string>
    <string name="settings_menu">Настройки</string>

    <!-- Settings -->
    
    <string name="dark_theme_switcher">Темная тема </string>
    
    <!-- dropdown list -->
    
    <string name="breakfast">Завтрак</string>
    <string name="lunch">Обед</string>
    <string name="dinner">Ужин</string>
    
    <!-- Add new Recipe -->

    <string name="enterRecipeName">Введите название блюда</string>
    <string name="addIngredient">Добавить ингредиент</string>
    <string name="addTechnologyCooking">Технология приготовления</string>
    <string name="saveRecipe">Сохранить рецепт</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    
    <!-- Calculate -->
    
    <string name="calculate_pfc_text">Калькулятор Б.Ж.У</string>
    <string name="text_enter_protein">Введите количество белков (г)</string>
    <string name="text_enter_fats">Введите количество жиров (г)</string>
    <string name="text_enter_carbohydrates">Введите количество углеводов (г)</string>
    <string name="calculate_button">Рассчитать</string>
    <string name="result_calories_count">*Результат*</string>
    <string name="clear_calculator">Очистить форму</string>

    <!-- Calculate fragments for the future-->
    <string name="resultCalculate">Результат</string>
    <string name="kkal">ккал</string>
    
    
    <string name="todo">todo</string>

</resources>